fix return type.
previously returned the file;
now returns the path.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^3.4.1",
     "dotenv": "^1.2.0",
     "mocha": "^2.3.4",
+    "mock-fs": "^3.6.0",
     "rewire": "^2.5.1",
     "sinon": "^1.17.2"
   }
